--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLAY\n",
+      "FILLING\n",
+      "BAR\n",
+      "THEATRE\n",
+      "EASYGOING\n",
+      "DATE\n",
+      "LEAD\n",
+      "THAT\n",
+      "STORY\n",
+      "ISLAND\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "for i in words:\n",
+    "    print(i.upper())"
    ]
   },
   {
@@ -41,11 +59,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['play',\n",
+       " 'filling',\n",
+       " 'bar',\n",
+       " 'theatre',\n",
+       " 'easygoing',\n",
+       " 'date',\n",
+       " 'lead',\n",
+       " 'that',\n",
+       " 'story',\n",
+       " 'island']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "new_list=[]\n",
+    "for i in words:\n",
+    "    new_list.append(i)\n",
+    "new_list"
    ]
   },
   {
@@ -57,11 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theatre\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "for i in words:\n",
+    "    if i.startswith('t'):\n",
+    "        print(i)\n",
+    "        break\n"
    ]
   },
   {
@@ -80,11 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "list=[]\n",
+    "for i in range(1,11):\n",
+    "    i=i*i\n",
+    "    list.append(i)\n",
+    "print(list)\n"
    ]
   },
   {
@@ -96,11 +162,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "list=[]\n",
+    "for i in range(1,11):\n",
+    "    if i%2==1:\n",
+    "        pass\n",
+    "        i=i*i\n",
+    "        list.append(i)\n",
+    "print(list)"
    ]
   },
   {
@@ -112,11 +193,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 256, 576]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "list=[]\n",
+    "i=1\n",
+    "while True:\n",
+    "    multiple=8*i\n",
+    "    square=multiple ** 2\n",
+    "    if square>=1000:\n",
+    "        break\n",
+    "    list.append(square)\n",
+    "    i+=1\n",
+    "print(list)"
    ]
   },
   {
@@ -170,11 +269,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "len(people)"
    ]
   },
   {
@@ -186,11 +297,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "w_kids=0\n",
+    "for i in people:\n",
+    "    if i['n_kids']>0:\n",
+    "        w_kids+=1\n",
+    "print(w_kids)"
    ]
   },
   {
@@ -202,11 +326,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "t_kids=0\n",
+    "for i in people:\n",
+    "    t_kids+=i['n_kids']\n",
+    "print(t_kids)"
    ]
   },
   {
@@ -218,17 +354,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Juan', 'age': 35, 'n_kids': 2}, {'name': 'Pepe', 'age': 28, 'n_kids': 0}, {'name': 'Sonia', 'age': 42, 'n_kids': 2}, {'name': 'Lucía', 'age': 23, 'n_kids': 3}, {'name': 'Leo', 'age': 56, 'n_kids': 5}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "updated_people = []\n",
+    "for person in people:\n",
+    "    if person[\"name\"].endswith(\"a\"):\n",
+    "        new_kids = person[\"n_kids\"] + 1\n",
+    "    else:\n",
+    "        new_kids = person[\"n_kids\"]\n",
+    "\n",
+    "    updated_person = {\n",
+    "            \"name\": person[\"name\"],\n",
+    "            \"age\": person[\"age\"] + 1,  \n",
+    "            \"n_kids\": new_kids\n",
+    "        }\n",
+    "    updated_people.append(updated_person)\n",
+    "\n",
+    "print(updated_people)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.2"
   },
   "toc": {
    "base_numbering": 1,
@@ -285,11 +444,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
   }
  },
  "nbformat": 4,
